# HM_2_BOT

./: Dockerfile  README.md  pyproject.toml  requirements.txt
bot_folder/: Dockerfile
